samples/_failures_safe/1761167364_545d8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b32d0f8.c: In function ‘main’:
./samples/SAFE/__tmp_4b32d0f8.c:197:28: error: expected ‘)’ at end of input
  197 |         print_token(&tokens
      |                    ~       ^
      |                            )
./samples/SAFE/__tmp_4b32d0f8.c:197:9: error: expected declaration or statement at end of input
  197 |         print_token(&tokens
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_4b32d0f8.c:197:9: error: expected declaration or statement at end of input
